# config-sentinel

./: README.md  pyproject.toml
src/config_sentinel/: __init__.py  sentinel.py
src/config_sentinel/handlers/: __init__.py  config_handler.py  json_handler.py  toml_handler.py  yaml_handler.py
src/examples/: config_example.py
src/handlers/: yaml_handler.py
src/tests/: conftest.py  test_handlers.py  test_sentinel.py
